compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__duplicate_const_extfn.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 1188
expression: "const wibble = 1\n\n@external(erlang, \"module2\", \"function2\")\nfn wibble() -> Float\n"
snapshot_kind: text
---
----- SOURCE CODE
const wibble = 1

@external(erlang, "module2", "function2")
fn wibble() -> Float


----- ERROR
error: Duplicate definition
  ┌─ /src/one/two.gleam:4:1
  │
1 │ const wibble = 1
  │ ------------ First defined here
  ·
4 │ fn wibble() -> Float
  │ ^^^^^^^^^^^ Redefined here

`wibble` has been defined multiple times.
Names in a Gleam module must be unique so one will need to be renamed.
